# retardmaxxing

./: .gitignore  MAGICBLOCK_PORT_GUIDE_EN.md  errors  magic-baser-gdd.md
magic-baser-solana/: Anchor.toml  CLAUDE.md  Cargo.toml  package.json
magic-baser-solana/app/: package-lock.json  package.json
magic-baser-solana/app/src/app/: globals.css  layout.tsx  page.tsx
magic-baser-solana/app/src/components/: CharacterSelect.tsx  DeathScreen.tsx  GameCanvas.tsx  GameHUD.tsx  Leaderboard.tsx  LoginChoice.tsx  ResultsScreen.tsx  WalletProvider.tsx
magic-baser-solana/app/src/contexts/: CoinsContext.tsx  GuestContext.tsx
magic-baser-solana/app/src/game/: chunks.ts  decorations.ts  enemies.ts  engine.ts  spriteLoader.ts  sprites.ts  tiles.ts  weapons.ts
magic-baser-solana/app/src/hooks/: useGame.ts  useGuestWallet.ts  useLeaderboard.ts
magic-baser-solana/app/src/lib/: supabase.ts
magic-baser-solana/app/src/solana/: client.ts  constants.ts  systems.ts
magic-baser-solana/app/src/types/: index.ts
magic-baser-solana/app/src/utils/: cookies.ts  share.ts
magic-baser-solana/patches/session-keys/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
magic-baser-solana/patches/session-keys/src/: lib.rs
magic-baser-solana/programs-ecs/components/game-session/: Cargo.toml
magic-baser-solana/programs-ecs/components/leaderboard/: Cargo.toml
magic-baser-solana/programs-ecs/components/player/: Cargo.toml
magic-baser-solana/programs-ecs/systems/end-game/: Cargo.toml
magic-baser-solana/programs-ecs/systems/init-player/: Cargo.toml
magic-baser-solana/programs-ecs/systems/start-game/: Cargo.toml
magic-baser-solana/programs-ecs/systems/submit-score/: Cargo.toml
magic-baser-solana/programs-ecs/systems/update-stats/: Cargo.toml
magic-baser-solana/programs-ecs/systems/use-revive/: Cargo.toml
magic-baser-solana/programs/magic-baser-solana/: Cargo.toml
magic-baser-solana/scripts/: create-world.ts
magic-baser-solana/tests/: magic-baser-solana.ts
(+12 files in other folders)
