[workspace]
members = [
    "programs/*",
    "programs-ecs/components/*",
    "programs-ecs/systems/*"
]
resolver = "2"

[workspace.dependencies]
bolt-lang = "0.2.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Fix for edition 2024 incompatibility with platform-tools rustc 1.84
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3.git", tag = "1.5.5" }

# Local patch for session-keys with fixed native_token import
session-keys = { path = "patches/session-keys" }